Major updates to the structure of the application
- Events and states for the puppet have been separated into separate
files
- Events now take a form more similar to the standard the Backbone
introduced
- Components have been generalized

--- a/examples/with-view/index.test.html
+++ b/examples/with-view/index.test.html
@@ -6,10 +6,10 @@
   <title>Puppets Test</title>
   <!-- Load the stylesheet for the puppet -->
   <link rel="stylesheet" href="test.css">
-  <link rel="stylesheet" href="../../build/game-schedule-info.puppet.css">
 </head>
 <body>
-  <!-- This is the element for the region we will be testing in -->
+
+  <h1>Puppets Test</h1>
   <div id='test'>
   </div>
   <div id='testone'>
@@ -18,14 +18,15 @@
   </div>
   <div id='testthree'>
   </div>
+
   <!-- Load up all of our scripts -->
   <script src="../../bower_components/jquery/jquery.js"></script>
   <script src="../../bower_components/underscore/underscore.js"></script>
   <script src="../../bower_components/backbone/backbone.js"></script>
   <script src="../../bower_components/marionette/lib/backbone.marionette.js"></script>
-  <script src="../../bower_components/puppets/build/puppets.js"></script>
-  <script src="../../build/game-schedule-info.puppet.js"></script>
-  <!-- The init script for testing -->
+
+  <script src="../../build/puppets.js"></script>
+  <script src="example-puppet/example.puppet.js"></script>
   <script src="test.init.js"></script>
 </body>
 </html>
