--- a/examples/with-view/index.test.html
+++ b/examples/with-view/index.test.html
@@ -24,9 +24,8 @@
   <script src="../../bower_components/underscore/underscore.js"></script>
   <script src="../../bower_components/backbone/backbone.js"></script>
   <script src="../../bower_components/marionette/lib/backbone.marionette.js"></script>
+  <script src="../../bower_components/backbone.wreqr-channel/backbone.wreqr-channel.js"></script>
 
   <script src="../../build/puppets.js"></script>
-  <script src="example-puppet/example.puppet.js"></script>
-  <script src="test.init.js"></script>
 </body>
 </html>
