Some minor updates

--- a/examples/with-view/index.test.html
+++ b/examples/with-view/index.test.html
@@ -25,7 +25,10 @@
   <script src="../../bower_components/backbone/backbone.js"></script>
   <script src="../../bower_components/marionette/lib/backbone.marionette.js"></script>
   <script src="../../bower_components/backbone.wreqr-channel/backbone.wreqr-channel.js"></script>
+  <script src="../../bower_components/machina/lib/machina.js"></script>
 
   <script src="../../build/puppets.js"></script>
+
+  <script src="test.init.js"></script>
 </body>
 </html>
