--- a/examples/with-view/index.test.html
+++ b/examples/with-view/index.test.html
@@ -28,6 +28,7 @@
 
   <script src="../../build/puppets.js"></script>
 
+  <script src="example-puppet/example.puppet.js"></script>
   <script src="test.init.js"></script>
 </body>
 </html>
