--- a/examples/with-view/index.test.html
+++ b/examples/with-view/index.test.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-  <h1>Puppets Test</h1>
+  <h1>Test</h1>
   <div id='test'>
   </div>
   <div id='testone'>
@@ -25,6 +25,8 @@
   <script src="../../bower_components/backbone/backbone.js"></script>
   <script src="../../bower_components/marionette/lib/backbone.marionette.js"></script>
   <script src="../../bower_components/machina/lib/machina.js"></script>
+  <script src="../../bower_components/backbone.wreqr-radio/backbone.wreqr-radio.js"></script>
+  <script src="../../bower_components/machina.wreqr-radio/machina.wreqr-radio.js"></script>
 
   <script src="../../build/puppets.js"></script>
 
