Small bug fixes / updates
Instantiates models and collections properly now. Passes the module as
the context of callbacks.

--- a/tests/index.html
+++ b/tests/index.html
@@ -35,7 +35,7 @@
   <script src='../bower_components/marionette/lib/backbone.marionette.js'></script>
   
   <!-- Load the test scripts -->
-  <script src='../bower_components/backbone.wreqr-radio/backbone.wreqr-radio.js'></script>
+  <script src='../bower_components/backbone.wreqr-radio/build/backbone.wreqr-radio.js'></script>
   <script src='../src/puppets.js' data-cover></script>
 
   <!-- Of course, the specs themselves as well -->
